	- Optimized dbUserGet (mostly for the user list)
	- All languages are listed on /r and /v/all instead of only those in use
	- Copy over search query when switching search type (htmlSearchBox)
	- Fixed obscure sorting bug on user VN list
	- Fixed calculation of tags_vn_bayesian.spoiler
	- Fixed bug with unhiding a producer entry
	- Set 'no spoilers' as default spoiler level for tags

2.7 - 2009-09-24
	- Improved styling of the threeboxes layout
	- Blacklist a users' votes from the VN vote statistics
	- usermods can browse a users' votes and list even when they are hidden
	- More sensible placing of the submit button on /v+/tagmod
	- Improved VN relations:
	  - Removed: summary, full story
	  - Added: same series, fandisc, original game
	  - Renamed: same characters to shares characters
	  - Merged: alternative setting into alternative version, and other into same series
	- Allow empty VN descriptions
	- New platforms: DOS, PC-98, Sega Saturn
	- Box titles on homepage are click-able
	- Russian translation of the interface
	- Random VN link in menu
	- Ignore some release fields when the patch status is checked
	- Batch edit downloadable trial releases to add freeware status
	- Remind the user to type English in several form fields
	- Full reply button in Quick reply box + larger textarea in post form
	- Removed visual-novels.net link from the interface
	- Fixed bug with excluding AVG(vote) < 0 VNs from tag pages
	- Allow media quantity up to 20 instead of 10

2.6 - 2009-08-09
	- New screen resolutions: 1024x600 and 1600x1200
	- Rewritten authentication system
	- New language: Vietnamese
	- Complete rewrite of Multi
	  - Asynchronous communication with PostgreSQL
	  - Got rid of the shared memory
	  - No more $self->multiCmd in the VNDB code
	  - Extended IRC bot functionality
	  - Tag cache regenerated daily rather than hourly
	- Added OpenSearch plugin + autodetection
	- Converted font size units to px in the css
	- Added double-post prevention